--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("Images/BGImage.jpg");
+    background-image: url("BGImage.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -125,3 +125,4 @@
 
 </body>
 </html>
+
