--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
     <!-- Navigation -->
     <div class="navbar">
-        <a href="Register.html">Register</a> |
-        <a href="Login.html">Login</a> |
-        <a href="AboutUs.html">About Us</a> |
-        <a href="ContactUs.html">Contact Us</a>
+        <a href="register.html">Register</a> |
+        <a href="login.html">Login</a> |
+        <a href="aboutus.html">About Us</a> |
+        <a href="contactus.html">Contact Us</a>
     </div>
 
     <!-- Main Content -->
@@ -125,4 +125,5 @@
 
 </body>
 </html>
+
 
