--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("BGImage.jpg");
+    background-image: url("Images/BGImage.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -94,10 +94,10 @@
 
     <!-- Navigation -->
     <div class="navbar">
-        <a href="register.html">Register</a> |
-        <a href="login.html">Login</a> |
-        <a href="aboutus.html">About Us</a> |
-        <a href="contactus.html">Contact Us</a>
+        <a href="Register.html">Register</a> |
+        <a href="Login.html">Login</a> |
+        <a href="AboutUs.html">About Us</a> |
+        <a href="ContactUs.html">Contact Us</a>
     </div>
 
     <!-- Main Content -->
@@ -125,5 +125,3 @@
 
 </body>
 </html>
-
-
